cmake_minimum_required (VERSION 3.0)
project(sz)
set (sz_VERSION_MAJOR 1)
set (sz_VERSION_MINOR 0)
set (CMAKE_CXX_STANDARD 14)
set (CMAKE_C_STANDARD 99)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_FLAGS "-g -O3")
set (CMAKE_C_FLAGS "-g -O3 -qopt-report=5")
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin)

find_library (ZSTD_LIBS zstd HINTS "/home/xin/utils/sz_master/lib")
set (ZSTD_INCLUDES "/home/xin/utils/sz_master/include")
add_subdirectory (src)
add_subdirectory (test)

