add_executable (sz_test sz_compress_test.cpp)
target_link_libraries (sz_test sz_cpp)

add_executable (sz_test_with_eb sz_compress_test_with_eb.cpp)
target_link_libraries (sz_test_with_eb sz_cpp)

add_executable (sz_compress_cp_preserve_2d_test sz_compress_cp_preserve_2d_test.cpp)
target_link_libraries (sz_compress_cp_preserve_2d_test sz_cpp)

add_executable (sz_compress_cp_preserve_3d_test sz_compress_cp_preserve_3d_test.cpp)
target_link_libraries (sz_compress_cp_preserve_3d_test sz_cpp)

add_executable (sz_compress_cp_preserve_3d_unstructured_test sz_compress_cp_preserve_3d_unstructured_test.cpp)
target_link_libraries (sz_compress_cp_preserve_3d_unstructured_test sz_cpp)
